# fend

./: .codecov.yml  .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  deploy.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: actions.yml  clippy.yml  rust.yml
cli/: Cargo.toml  LICENSE.md  README.md  build.rs
cli/src/: args.rs  color.rs  config.rs  context.rs  custom_units.rs  default_config.toml  exchange_rates.rs  file_paths.rs  helper.rs  history.rs  interrupt.rs  main.rs  random.rs  terminal.rs
cli/src/color/: base.rs  output_colors.rs  style.rs
cli/wix/: main.wxs
contrib/: check-for-updates.sh  deploy.sh  test-aur.sh  zsh-helper.zsh
core/: Cargo.toml  README.md
core/src/: ast.rs  date.rs  datetime.rs  err.rs  error.rs  eval.rs  format.rs  ident.rs  inline_substitutions.rs  interrupt.rs  json.rs  lexer.rs  lib.rs  num.rs  parse.rs  parser.rs  random.rs  result.rs  scope.rs  serialize.rs  unit.rs  units.rs  value.rs
core/src/date/: day.rs  day_of_week.rs  month.rs  parser.rs  year.rs
core/src/num/: base.rs  bigint.rs  bigrat.rs  biguint.rs  builtin-gnu.units  builtin.units  complex.rs  continued_fraction.rs  currency.units  definitions-prepend.units  definitions.units  dist.rs  exact.rs  exact_base.rs  formatting_style.rs  real.rs  unit.rs
core/src/num/unit/: base_unit.rs  named_unit.rs  unit_exponent.rs
core/src/units/: builtin.rs  builtin_gnu.rs  builtin_units.rs
core/src/value/: boolean.rs  built_in_function.rs  func.rs  unit.rs
core/tests/: integration_tests.rs
documentation/: add-header-ids.lua  build.sh  include-code-files.lua  include-files.lua  index.md  manpage.md  pandoc-metadata.yml
documentation/chapters/: configuration.md  expressions.md  scripting.md
gemini/: Cargo.toml
gemini/src/: main.rs
icon/: create-resources.ps1  resources.rc  resources.res
logo/: logo.clip.bz2
src/: changelog.rs  config_dir.rs  helper.rs  interrupt.rs  main.rs
telegram-bot/: .gitignore  build.sh  deploy.sh  esbuild.ts  index.js  index.ts  package-lock.json  package.json  telegram_api_token.js.sample  tsconfig.json
wasm/: .gitignore  Cargo.toml  LICENSE.md  LICENSE_MIT  README.md
wasm/src/: lib.rs
web/: .prettierignore  biome.json  build.sh  cf-worker.js  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  widget.css  widget.html  widget.js
web/cloudflare/: cf-worker.js
web/src/: App.tsx  index.css  main.tsx  widget.css  widget.ts  widget.tsx
web/src/components/: NewTabLink.tsx  PendingOutput.tsx
web/src/hooks/: useCurrentInput.ts  useFend.ts  useHistory.ts
web/src/lib/: WaitGroup.ts  exchange-rates.ts  fend.ts  wasm.ts  worker.ts
wiki/: Home.md
windows-msix/: .gitignore  AppxManifest.xml  README.md  build.ps1  fend-signing-cert.pfx
windows-wix/: build.ps1  main.wxs
windows-wix/.config/: dotnet-tools.json
