[workspace]
resolver = "2"
members = ["cli", "core", "gemini", "wasm"]

[workspace.package]
version = "1.5.6"
description = "Arbitrary-precision unit-aware calculator"
edition = "2024"
homepage = "https://github.com/printfn/fend"
repository = "https://github.com/printfn/fend"
keywords = ["calculator", "cli", "conversion", "math", "tool"]
categories = ["command-line-utilities", "mathematics", "science"]
license = "MIT"

[workspace.dependencies]
fend-core = { version = "1.5.6", path = "core" }

[profile.release]
lto = true
opt-level = "z" # small code size
strip = "symbols"
