[package]
name = "fend"
version.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "../README.md"

[dependencies]
ctrlc = "3.4.5"
fend-core.workspace = true
rand = { version = "0.9.0", default-features = false, features = ["thread_rng"] }
rustyline = { version =  "15.0.0", default-features = false, features = ["with-file-history", "custom-bindings"] }
serde = { version = "1.0.218", default-features = false }
toml = { version = "0.8.20", default-features = false, features = ["parse"] }
minreq = { version = "2.13.2", default-features = false, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[features]
native-tls = [ "dep:minreq", "minreq/https-native" ]
rustls = [ "dep:minreq", "minreq/https-rustls-probe" ]
default = [ "native-tls" ]
