[package]
name = "fend"
version.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "../README.md"

[dependencies]
ctrlc = "3.4.7"
fend-core.workspace = true
rustyline = { version =  "15.0.0", default-features = false, features = ["with-file-history", "custom-bindings"] }
serde = { version = "1.0.219", default-features = false }
toml = { version = "0.8.22", default-features = false, features = ["parse"] }
minreq = { version = "2.13.4", default-features = false, optional = true }
nanorand = "0.8.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[features]
native-tls = [ "dep:minreq", "minreq/https-native" ]
rustls = [ "dep:minreq", "minreq/https-rustls-probe" ]
default = [ "native-tls" ]
