[package]
name = "fend"
version.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "../README.md"

[dependencies]
fend-core.workspace = true
rand = { version = "0.9.1", default-features = false, features = ["thread_rng"] }
rustyline = { version =  "16.0.0", default-features = false, features = ["with-file-history", "custom-bindings"] }
serde = { version = "1.0.219", default-features = false }
toml = { version = "0.9.2", default-features = false, features = ["parse", "serde", "std"] }
reqwest = { version = "0.12.22", default-features = false, features = ["http2", "system-proxy"], optional = true }
tokio = { version = "1.46.1", default-features = false, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[features]
native-tls = ["dep:reqwest", "reqwest/native-tls"]
rustls = ["dep:reqwest", "reqwest/rustls-tls-native-roots"]
default = ["native-tls"]
