[package]
name = "fend-core"
version = "1.1.1"
description = "Arbitrary-precision unit-aware calculator"
homepage = "https://github.com/printfn/fend"
repository = "https://github.com/printfn/fend"
readme = "README.md"
license = "MIT"
keywords = ["calculator", "library", "conversion", "math", "tool"]
edition = "2021"
categories = ["command-line-utilities", "mathematics", "science"]

[dependencies]
