[package]
name = "fend-gemini"
version.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
aws-lc-rs = "1.12.6"
eyre = "0.6.12"
fend-core.workspace = true
percent-encoding = "2.3.1"
rand = "0.9.0"
rcgen = { version = "0.13.2", default-features = false, features = ["aws_lc_rs"] }
rustls = "0.23.23"
time = "0.3.40"
tokio = { version = "1.43.0", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "time"] }
tokio-rustls = "0.26.1"
tokio-util = "0.7.13"
url = "2.5.4"
