[package]
name = "fend-wasm"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
#default = ["console_error_panic_hook"]
default = []

[dependencies]
fend-core.workspace = true
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
js-sys = "0.3.65"
wasm-bindgen = "0.2.88"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
